test/compile-fail/call__undef_sym.he
fn main
{
    blah(); //~ ERROR 3005
    ret 0;
}
